--- a/AfficheFIlm/birdsofprey.html
+++ b/AfficheFIlm/birdsofprey.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Film Fantasy Island</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Birds of Prey</title>
+    <link rel="stylesheet" href="/css/style.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -69,22 +69,23 @@
     </style>
 </head>
 <body>
-    <div class="movie-container">
+    <div class="movie-container"> 
         <div class="movie-details">
-            <h1>Fantasy Island</h1>
-            <div class="info-item">Genre : Fantasy</div>
-            <div class="info-item">Année : 2021</div>
-            <div class="info-item">Étoiles : 26.1</div>
+            <h1>Birds of Prey</h1>
+            <div class="info-item">Genre : Action</div>
+            <div class="info-item">Année : 2020</div>
+            <div class="info-item">Étoiles : 5.7</div>
             <div class="info-item">Description :</div>
             <p class="movie-description">
-                Un groupe de spectateurs arrive dans un hôtel insulaire pour vivre leurs rêves,
-                pour se retrouver piégés dans des scénarios cauchemardesques.
+                "Birds of Prey" suit l'histoire de Harley Quinn après sa séparation avec le Joker. 
+                Elle forme une alliance improbable avec d'autres héroïnes, dont Black Canary, Huntress, et Renee Montoya. 
+                Ensemble, elles unissent leurs forces pour protéger une jeune fille nommée Cassandra Cain des forces du crime dirigées par le redoutable criminel Black Mask.
             </p>
             <div class="reservation-section">
                 Réserver la séance
             </div>
         </div>
-        <img class="movie-poster" src="images/Fantasy_Island.jpg" alt="Affiche Fantasy Island">
+        <img class="movie-poster" src="./images/birdsofpray.jpg" alt="Affiche Fantasy Island">  
     </div>
 </body>
 </html>
