--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </div>
             <div class="flow">
                 <span class="material-icons">tv</span>
-                <h2>Tv</h2>
+                <h2>Tv</h2>     
             </div>
             <div class="flow">
                 <span class="material-icons">search</span>
@@ -110,11 +110,11 @@
             <div class="flow">
                 <span class="material-icons">account_circle</span>
                 <div class="flow">
-                    <a href="signup.html" class="sign-in-link">Sign in</a>
+                    <a href="../web-movie-master/sign-up/signup.html" class="sign-in-link">Sign in</a>
                 </div>
             </div>
         </div>
-        <div class="right">
+        <div class="right">         
             <div class="heading">
                 <div class="head-content">
                     <h2>Fantasy island</h2>
@@ -123,7 +123,7 @@
                         <div class="btn"><span class="material-icons star">star</span><span>26.1</span></div>
                     </div>
                     <p>A group of content viewers arrive at an island hotel to live out their dreams, only to find themselves trapped in nightmare scenarios.</p>
-                    <a href="fantasy.html" class="btn btn-main">check more</a>
+                    <a href="../web-movie-master/AfficheFIlm/fantasy.html" class="btn btn-main">check more</a>
                 </div>
                 <div class="img-container"></div>
             </div>
