--- a/sign-up/signin.html
+++ b/sign-up/signin.html
@@ -17,12 +17,12 @@
                     <input type="email" class="login__input" name="email" placeholder="Email" required></div>
                 <div class="login__field">
                     <i class="login__icon fas fa-lock"></i>
-                    <input type="password" class="login__input" name="password" placeholder="Password" required>
+                    <input type="password" class="login__input" name="password" placeholder="password" required>
                 </div>
                 <button type="submit" class="button login__submit">
                     <span class="button__text">Log In Now</span>
                     <i class="button__icon fas fa-chevron-right"></i>
-                </button>				
+                </button>               
             </form>
             <div class="social-login">
                 <h3>Login</h3>
@@ -42,3 +42,4 @@
     </div>
 </body>
 </html>
+
