--- a/AfficheFIlm/fantasy.html
+++ b/AfficheFIlm/fantasy.html
@@ -77,8 +77,7 @@
             <div class="info-item">Étoiles : 26.1</div>
             <div class="info-item">Description :</div>
             <p class="movie-description">
-                Un groupe de spectateurs arrive dans un hôtel insulaire pour vivre leurs rêves,
-                pour se retrouver piégés dans des scénarios cauchemardesques.
+                echo Description.
             </p>
             <div class="reservation-section">
                 Réserver la séance
