--- a/sign-up/signin.html
+++ b/sign-up/signin.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="screen">
         <div class="screen__content">
-            <form class="login" action="connect.php" method="post">
+            <form class="login" action="./connect.php" method="post">
                 <div class="login__field">
                     <i class="login__icon fas fa-user"></i>
                     <input type="email" class="login__input" name="email" placeholder="Email" required></div>
