--- a/ajoutFilm.html
+++ b/ajoutFilm.html
@@ -5,58 +5,69 @@
 <title>Création de film</title>
 <style>
 body {
- font-family: Arial, sans-serif;
+ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  background-color: #f4f4f4;
  margin: 0;
  padding: 0;
 }
 
 h2 {
- color: #333;
  text-align: center;
- margin-top: 50px;
+ padding: 20px;
+ color: #4a4a4a;
 }
 
 form {
- width: 500px;
- margin: 50px auto;
+ max-width: 600px;
+ margin: 20px auto;
+ padding: 20px;
  background-color: #fff;
- padding: 30px;
- border-radius: 8px;
- box-shadow: 0px 0px 10px 0px #000;
+ border-radius: 15px;
+ box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
 }
 
-form div {
- margin-bottom: 15px;
-}
-
-form label {
+label {
  display: block;
  margin-bottom: 5px;
+ font-weight: bold;
+ color: #4a4a4a;
 }
 
-form input[type="text"], form input[type="date"], form input[type="number"], form textarea {
+input, select {
  width: 100%;
  padding: 10px;
- border: 1px solid #ddd;
- border-radius: 4px;
+ margin-bottom: 20px;
+ border-radius: 5px;
+ border: 1px solid #ccc;
+ font-size: 16px;
 }
 
-form input[type="file"] {
- border: none;
+input, select, textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
 }
 
-form input[type="submit"] {
- background-color: #333;
+textarea {
+  height: 100px; /* ou toute autre valeur qui vous convient */
+}
+
+input[type="submit"] {
+ background-color: #4a4a4a;
  color: #fff;
- padding: 10px 20px;
- border: none;
- border-radius: 4px;
  cursor: pointer;
+ border: none;
+ font-size: 18px;
+ padding: 10px 20px;
+ border-radius: 5px;
+ transition: background-color 0.3s ease;
 }
 
-form input[type="submit"]:hover {
- background-color: #444;
+input[type="submit"]:hover {
+ background-color: #6a6a6a;
 }
 </style>
 </head>
@@ -91,8 +102,53 @@ form input[type="submit"]:hover {
  Minutes: <input type="number" id="duree_minutes" name="duree_minutes" min="0" max="59">
  </div>
  <div>
+ <label for="pays">Pays:</label>
+ <select name="pays" id="pays">
+ <option value="france">France</option>
+ <option value="espagne">Espagne</option>
+ <option value="italie">Italie</option>
+ <option value="royaume-uni">Royaume-Uni</option>
+ <option value="etats-unis">Etats-Unis</option>
+ <option value="japon">Japon</option>
+ <option value="chine">Chine</option>
+ <option value="coree-du-sud">Corée du Sud</option>
+ <option value="autre">Autre</option>
+ </select>
+ </div>
+ <div>
+ <label for="langue">Langue:</label>
+ <select name="langue" id="langue">
+ <option value="francais">Français</option>
+ <option value="anglais">Anglais</option>
+ <option value="espagnol">Espagnol</option>
+ <option value="italien">Italien</option>
+ <option value="japonais">Japonais</option>
+ <option value="chinois">Chinois</option>
+ <option value="coreen">Coréen</option>
+ <option value="autre">Autre</option>
+ </select>
+ </div>
+ <div>
+ <label for="sous-titre">Sous-titres:</label>
+ <select name="sous-titre" id="sous-titre">
+ <option value="francais">Français</option>
+ <option value="anglais">Anglais</option>
+ <option value="espagnol">Espagnol</option>
+ <option value="italien">Italien</option>
+ <option value="japonais">Japonais</option>
+ <option value="chinois">Chinois</option>
+ <option value="coreen">Coréen</option>
+ <option value="autre">Autre</option>
+ </select>
+ </div>
+ 
+ <div>
  <label for="image">Image:</label>
- <input type="file" id="image" name="image" accept=".jpeg, .jpg, .png">
+ <input type="file" id="image" name="image" accept=".jpeg, .jpg, .png, .jifi">
+ </div>
+ <div>
+  <label for="Ajouter">Ajouter</label>
+  <input type="submit" value="Ajouter">
  </div>
 </form>
 
